fix response & add swagger
